# pydantic-xml

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/pages/: api.rst  contribute.rst  installation.rst  misc.rst  quickstart.rst
docs/source/pages/data-binding/: aliases.rst  attributes.rst  elements.rst  generics.rst  heterogeneous.rst  homogeneous.rst  index.rst  mappings.rst  models.rst  raw.rst  text.rst  unions.rst  wrapper.rst
examples/: generics.py  quickstart.py  recursive.py  serializer.py
examples/computed-entities/: doc.xml  model.py
examples/custom-encoder/: doc.xml  model.py
examples/generic-model/: doc.json  doc.xml  model.py
examples/quickstart/: doc.json  doc.xml  model.py
examples/self-ref-model/: doc.json  doc.xml  model.py
examples/snippets/: aliases.py  attribute.py  attribute_namespace.py  attribute_namespace_inheritance.py  default_namespace.py  dynamic_model_creation.py  element_model.py  element_namespace.py  element_namespace_global.py  element_namespace_model.py  element_primitive.py  element_raw.py  exclude_none.py  exclude_unset.py  homogeneous_dicts.py  homogeneous_models.py  homogeneous_models_tuples.py  homogeneous_primitives.py  homogeneous_tuples.py  mapping.py  mapping_element.py  mapping_typed.py  model_generic.py  model_mode_ordered.py  model_mode_strict.py  model_mode_unordered.py  model_namespace.py  model_root_collection.py  model_root_primitive.py  model_root_type.py  model_self_ref.py  model_template.py  serialization_nillable.py  skip_empty.py  text_primitive.py  text_primitive_optional.py  union_discriminated.py  union_models.py  union_primitives.py  wrapper.py  (+1 more)
examples/snippets/lxml/: model_mode_strict.py
examples/snippets/py3.9/: serialization.py
examples/xml-serialization/: model.py
examples/xml-serialization-annotation/: doc.xml  model.py
examples/xml-serialization-decorator/: model.py
pydantic_xml/: __init__.py  backend.py  compat.py  config.py  errors.py  fields.py  model.py  mypy.py  serializers.py  typedefs.py  utils.py
pydantic_xml/backend/: __init__.py  lxml.py  std.py
pydantic_xml/element/: __init__.py  element.py  utils.py
pydantic_xml/element/native/: __init__.py  lxml.py  std.py
pydantic_xml/serializers/: __init__.py  encoder.py  serializer.py
pydantic_xml/serializers/factories/: __init__.py  call.py  forwardref.py  heterogeneous.py  homogeneous.py  is_instance.py  mapping.py  model.py  named_tuple.py  primitive.py  raw.py  tagged_union.py  tuple.py  typed_mapping.py  union.py  wrapper.py
tests/: helpers.py  test_computed_fields.py  test_dynamic_model_creation.py  test_encoder.py  test_entity_naming.py  test_errors.py  test_examples.py  test_extra.py  test_extra_allow.py  test_forward_ref.py  test_generics.py  test_heterogeneous_collections.py  test_homogeneous_collections.py  test_mappings.py  test_misc.py  test_named_tuple.py  test_namespaces.py  test_preprocessors.py  test_primitives.py  test_raw.py  test_search_modes.py  test_submodels.py  test_types.py  test_unions.py  test_wrapped.py
